@startuml

title __IMAGEANALYSIS's Class Diagram__\n

  package platform {
    package platform.imageAnalysis {
      class AnalysisResult {
          - input : BufferedImage
          - output : Mat
          - additionalInformation : Map<String, Serializable>
          + AnalysisResult()
          + refresh()
      }
    }
  }



  package platform {
    package platform.imageAnalysis {
      class AnalysisTypeManager {
          - stringToAnalysisMap : HashMap<String, ImageProcessor>
          + AnalysisTypeManager()
      }
    }
  }
  

  package platform {
    package platform.imageAnalysis {
      class ImageAnalysis {
          - precedence : int
          - additionalIntAttr : Map<String, Object>
          - imageAnalysisType : String
          + ImageAnalysis()
      }
    }
  }
  

  package platform {
    package platform.imageAnalysis {
      class ImageAnalyzer {
          ~ cameraType : String
          ~ cameraId : String
          ~ inputImage : BufferedImage
          ~ sortedAlgorithmSet : Set<ImageAnalysis>
          ~ develperMode : boolean
          + ImageAnalyzer()
          + close()
          + performAnalysis()
          - processImage()
      }
    }
  }

  

  package platform {
    package platform.imageAnalysis {
      abstract class ImageProcessor {
          {abstract} + init()
          {abstract} + performProcessing()
      }
    }
  }

  package platform {
      package platform.imageAnalysis {
        package platform.imageAnalysis.impl {
          package platform.imageAnalysis.impl.outputObjects {
            class ObjectLocation {
                ~ x_centroid : float
                ~ y_centroid : float
                ~ x_max : float
                ~ x_min : float
                ~ y_max : float
                ~ y_min : float
                ~ creationTime : double
                + ObjectLocation()
                + calculateSquaresize()
            }
          }
        }
      }
    }

    package platform {
      package platform.imageAnalysis {
        package platform.imageAnalysis.impl {
          class HSVMultiObjectLocator {
              + init()
              + performProcessing()
          }
        }
      }
    }


  package platform {
    package platform.cameraManager {
      class DirectStreamView {
          ~ streamURI : String
          ~ username : String
          ~ password : String
          ~ cameraWorking : boolean
          {static} - width : int
          {static} - height : int
          - videoSurface : JPanel
          - image : BufferedImage
          - mediaPlayerComponent : DirectMediaPlayerComponent
          - streamIsPlaying : boolean
          + DirectStreamView()
          + playFromURIandUserPW()
          + updateStreamState()
          + isStreamIsPlaying()
          + getVideoSurface()
          + getOpenCVImageMat()
          + getJavaCVImageMat()
          + getBufferedImage()
          + bufferedImage2Mat()
          {static} + Mat2BufferedImage()
      }
    }
  }
  

  AnalysisTypeManager -up-|> Serializable
  ImageAnalysis -up-|> Serializable
  ImageAnalysis o-- AnalysisTypeManager : analysisTypeManager
  ImageAnalyzer o-- DirectStreamView : directStreamView
  ImageAnalyzer o-- AnalysisResult : analysisResult
  ImageProcessor -up-|> Serializable


  ObjectLocation -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
